Added regex-redux implementation using Project Panama features