@@ -10,6 +10,7 @@ Maintainer of [The Computer Language Benchmarks Game](https://salsa.debian.org/b
 
 - [binary-trees](#binary-trees) using Project Valhalla to implement inline value types
 - [mandelbrot](#mandelbrot) using Vector API from Project Panama to implement explicit SIMD vectorization
+- [regex-redux](#regex-redux) using Foreign APIs from Project Panama to integrate with native libraries
 
 ## binary-trees
 
@@ -17,7 +18,7 @@ binarytrees_7.java is the [binary-trees Java #7 program](https://benchmarksgame-
 
 binarytrees_valhalla.java is a modification of above program that incorporates a tree node allocation reducing trick from [binary-trees C# .NET #6 program](https://benchmarksgame-team.pages.debian.net/benchmarksgame/program/binarytrees-csharpcore-6.html), which is in turn based on [binary-trees F# .NET #5 program](https://benchmarksgame-team.pages.debian.net/benchmarksgame/program/binarytrees-fsharpcore-5.html). The trick halves allocation count, i.e. 2x fewer objects are allocated on the heap.
 
-To compile and run binarytrees_valhalla.java, you first need to get a build of Project Valhalla of OpenJDK. First you need to invoke `git clone https://github.com/openjdk/valhalla.git` (I've used commit 683bd428afa00aeb2f8e69fef028673004d3ae86 ). Then proceed with building that OpenJDK flavor: https://github.com/openjdk/valhalla/blob/lworld/doc/building.md
+To compile and run binarytrees_valhalla.java, you first need to get a build of Project Valhalla of OpenJDK. First you need to invoke `git clone https://github.com/openjdk/valhalla.git` (I've used a commit with number 683bd428afa00aeb2f8e69fef028673004d3ae86 ). Then proceed with building that OpenJDK flavor: https://github.com/openjdk/valhalla/blob/lworld/doc/building.md
 
 Results:
 ```
@@ -127,4 +128,71 @@ WARNING: Using incubator modules: jdk.incubator.vector
 real	0m14,670s
 user	0m56,406s
 sys	0m0,392s
+```
+
+## regex-redux
+
+regexredux_3.java is the [regex-redux Java #3 program](https://benchmarksgame-team.pages.debian.net/benchmarksgame/program/regexredux-java-3.html) that is currently (i.e. as of 21st March 2021) the fastest Java implementation according to official results.
+
+regexredux_panama_foreign.java is an implementation written from scratch using Foreign APIs (i.e. both Foreign-Memory Access API and Foreign Linker API) that integrates with [PCRE2 library](https://www.pcre.org/current/doc/html/).
+
+To compile and run regexredux_panama_foreign.java you first need to generate glue code using jextract utility from Project Panama, which can be found on http://jdk.java.net/panama/. I've used jextract from https://download.java.net/java/early_access/panama/2/openjdk-17-panama+2-51_linux-x64_bin.tar.gz Additionally, you need OpenJDK 16 build to compile and run main class.
+
+```
+$ # use jextract utility from OpenJDK build from Project Panama
+$ # to generate glue code in compiled form (*.class files)
+$ mkdir pcre2.jextract
+$ cd pcre2.jextract
+$ ~/devel/jdk-panama/bin/jextract -C "-D PCRE2_CODE_UNIT_WIDTH=8" -l pcre2-8 /usr/include/pcre2.h
+$ cd ..
+
+$ # generate test data using some valid fasta benchmark program implementation
+$ ~/devel/jdk-16/bin/java fasta_2.java 5000000 > regexredux-input-5000000.txt
+
+$ # compile main classes
+$ ~/devel/jdk-16/bin/javac regexredux_3.java
+$ ~/devel/jdk-16/bin/javac --add-modules jdk.incubator.foreign -cp pcre2.jextract regexredux_panama_foreign.java
+warning: using incubating module(s): jdk.incubator.foreign
+1 warning
+
+$ # run
+
+$ time ~/devel/jdk-16/bin/java regexredux_3 < regexredux-input-5000000.txt
+agggtaaa|tttaccct 356
+[cgt]gggtaaa|tttaccc[acg] 1250
+a[act]ggtaaa|tttacc[agt]t 4252
+ag[act]gtaaa|tttac[agt]ct 2894
+agg[act]taaa|ttta[agt]cct 5435
+aggg[acg]aaa|ttt[cgt]ccct 1537
+agggt[cgt]aa|tt[acg]accct 1431
+agggta[cgt]a|t[acg]taccct 1608
+agggtaa[cgt]|[acg]ttaccct 2178
+
+50833411
+50000000
+27388361
+
+real	0m4,486s
+user	0m12,814s
+sys	0m0,233s
+
+$ time ~/devel/jdk-16/bin/java --add-modules jdk.incubator.foreign -cp .:pcre2.jextract -Dforeign.restricted=permit -Djava.library.path=/usr/lib/x86_64-linux-gnu/ regexredux_panama_foreign < regexredux-input-5000000.txt 
+WARNING: Using incubator modules: jdk.incubator.foreign
+agggtaaa|tttaccct 356
+[cgt]gggtaaa|tttaccc[acg] 1250
+a[act]ggtaaa|tttacc[agt]t 4252
+ag[act]gtaaa|tttac[agt]ct 2894
+agg[act]taaa|ttta[agt]cct 5435
+aggg[acg]aaa|ttt[cgt]ccct 1537
+agggt[cgt]aa|tt[acg]accct 1431
+agggta[cgt]a|t[acg]taccct 1608
+agggtaa[cgt]|[acg]ttaccct 2178
+
+50833411
+50000000
+27388361
+
+real	0m1,201s
+user	0m3,143s
+sys	0m0,132s
 ```
